<resources>
    <string name="app_name">MyTraffixAplication</string>
    <string name="hello">Hello!</string>
    <string name="login_note">by signing in you are agreeing our</string>
    <string name="term">Term and privacy policy</string>
    <string name="ed_email">Email</string>
    <string name="ed_password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="signUp_suggest">Don’t have an account yet?</string>
    <string name="login">Login</string>
    <string name="option_login">or login with</string>
    <string name="welcome">Welcome,</string>
    <string name="signin_up_note">by signing up you are agreeing our</string>
    <string name="signup_hello">Hello,</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign in</string>
    <string name="login_suggest">Already have an account?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="hi_adrian">Hi, Adrian</string>
    <string name="kota_bandung">Kota Bandung</string>
    <string name="suhu">19°</string>
    <string name="kepadatan">Kepadatan :</string>
    <string name="_50_kendaraan">50 kendaraan</string>
    <string name="update_2_menit_yang_lalu">Update 2 menit yang lalu</string>
    <string name="no_data">-</string>
    <string name="back">Back</string>
    <string name="muhammad_adrian_ronaldy">Muhammad Adrian Ronaldy</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
</resources>