<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            app:cardCornerRadius="22dp"
            android:layout_marginTop="-22dp"
            android:clipChildren="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bottom_corners"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hello_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/hi_adrian"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/profile_image"
                    app:layout_constraintBottom_toBottomOf="@+id/hello_user"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="@+id/hello_user" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="322dp"
                    android:layout_height="117dp"
                    android:layout_marginBottom="48dp"
                    android:clipChildren="true"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bandung">

                        <ProgressBar
                            android:id="@+id/progress_circular"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="38dp"
                            android:layout_marginTop="14dp"
                            android:text="@string/kota_bandung"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_suhu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_data"
                            android:textColor="@color/white"
                            android:textSize="55sp"
                            app:layout_constraintEnd_toEndOf="@+id/textView3"
                            app:layout_constraintStart_toStartOf="@+id/textView3"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <ImageView
                            android:id="@+id/iv_weather"
                            android:layout_width="99dp"
                            android:layout_height="79dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_suhu"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/textView3" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="19dp"
            android:background="@drawable/bg_search_view"
            app:iconifiedByDefault="false"
            app:queryHint="Search here ...."/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_card_info"
            android:layout_marginVertical="8dp"
            android:paddingHorizontal="19dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</ScrollView>