<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.profile.ProfileActivity">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
        app:layout_constraintStart_toEndOf="@+id/arrow_back"
        app:layout_constraintTop_toTopOf="@+id/arrow_back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/muhammad_adrian_ronaldy"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="15dp"
            android:layout_height="475dp"
            android:layout_marginBottom="-15dp"
            android:clipChildren="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="27dp"
                android:background="@drawable/background_card_profile">

                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_help"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:clipChildren="true"
                    android:elevation="0dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/mainColor">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/help_line"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/help"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="@+id/imageView2" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_logout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="12dp"
                    android:clipChildren="true"
                    android:elevation="0dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/menu_help"
                    tools:layout_editor_absoluteX="27dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/mainColor">

                        <ImageView
                            android:id="@+id/ic_logout"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/logout_circle"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/logout"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="@+id/ic_logout"
                            app:layout_constraintStart_toEndOf="@+id/ic_logout"
                            app:layout_constraintTop_toTopOf="@+id/ic_logout" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>